1.5/files/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: backend
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
