1.5/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 80
